--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -34,6 +34,8 @@
                         &#xA0;<span translate="global.menu.entities.tag">tag</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="picture"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.picture">picture</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="level"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.level">level</span></a></li>
                         <!-- JHipster will add entities to the menu here -->
                     </ul>
                 </li>
