--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -30,6 +30,8 @@
                     <ul class="dropdown-menu">
                         <li ui-sref-active="active" ><a ui-sref="levels"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.levels">levels</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="pictures"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.pictures">pictures</span></a></li>
                         <!-- JHipster will add entities to the menu here -->
                     </ul>
                 </li>
