--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -34,6 +34,8 @@
                         &#xA0;<span translate="global.menu.entities.pictures">pictures</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="tags"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.tags">tags</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="species"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.species">species</span></a></li>
                         <!-- JHipster will add entities to the menu here -->
                     </ul>
                 </li>
