--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -36,6 +36,10 @@
                         &#xA0;<span translate="global.menu.entities.tags">tags</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="species"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.species">species</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="userStars"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.userStars">userStars</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="userSpecies"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.userSpecies">userSpecies</span></a></li>
                         <!-- JHipster will add entities to the menu here -->
                     </ul>
                 </li>
